# zero-trust-vault

./: .gitignore  Cargo.toml  README  lib.rs
src/: lib.rs  main.rs
src/crypto/: aes_gcm.rs  kdf.rs  merkle.rs  mod.rs
src/fuse/: mod.rs
src/sandbox/: mod.rs
src/tests/: vfs_crypto_integration.rs
src/vfs/: mod.rs
