[package]
name = "zero_trust_vault"
version = "0.1.0"
edition = "2024"

# ------------------------------------------------------------------------------
# EXECUTABLE CONFIGURATION
# Tells Cargo to build a binary named "atom" using our main.rs file
# ------------------------------------------------------------------------------
[[bin]]
name = "atom"
path = "src/main.rs"

[dependencies]
# Cryptography
aes-gcm = "0.10"  
rand = "0.8"      
sha2 = "0.10"     

# Interactive CLI & Subcommands
rustyline = "14.0" 
clap = { version = "4.4", features = ["derive"] } # <-- NEW: For parsing `create` and `shell`
rpassword = "7.2" # safely masks password input in the terminal

# Metadata & Serialization
serde = { version = "1.0", features = ["derive"] } 
bincode = "1.3"                                    

[dev-dependencies]
proptest = "1.4"
